--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="A photo of Mark Guerrero"
               width="264"
             />
@@ -64,7 +64,7 @@
           </li>
           <li>
             <img
-              src="/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="A photo of Tom Ford"
               width="264"
             />
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="A photo of Camila Garcia"
               width="264"
             />
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="/images/img.jpg"
+              src="./images/img.jpg"
               alt="A photo of Daniel Wilson"
               width="264"
             />
